--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <gradient
-        android:startColor="#e6130c"
-        android:centerColor="#ef726a"
-        android:endColor="#f4eaea"
+        android:startColor="#f1f1f1"
+        android:centerColor="#f1f1f1"
+        android:endColor="#f1f1f1"
         android:type="linear"
-        android:angle="135"/>
+        android:angle="135"/> 
 </shape>
