--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -3,17 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:id="@+id/content_help"
+    android:id="@+id/content_settings"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/about"
     tools:context="eizougraphic.sintret.hushpuppies.AboutActivity">
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="match_parent"
-        android:text="Help"
+        android:text="Profile"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
