--- a/app/src/main/res/layout/content_stamp.xml
+++ b/app/src/main/res/layout/content_stamp.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:id="@+id/content_help"
+    android:id="@+id/content_stamp"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -12,8 +12,8 @@
 
     <TextView
         android:id="@+id/textView1"
+        android:text="Stamps"
         android:layout_width="match_parent"
-        android:text="Help"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
