--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,9 +11,7 @@
         <item android:id="@+id/nav_coupon" android:icon="@android:drawable/ic_menu_send"
             android:title="Coupon" />
         <item android:id="@+id/nav_people" android:icon="@android:drawable/sym_action_call"
-            android:title="People" />
+            android:title="Profile" />
     </group>
-
-
 
 </menu>
