--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#d63a66</color>
-    <color name="colorPrimaryDark">#ab0859</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#F1F1F1</color>
+    <color name="colorPrimaryDark">#BDBDBD</color>
+    <color name="colorAccent">#dddddd</color>
 
-    <color name="primary">#E43F3F</color>
-    <color name="primary_dark">#E12929</color>
-    <color name="primary_darker">#CC1D1D</color>
+    <color name="primary">#cccccc</color>
+    <color name="primary_dark">#555555</color>
+    <color name="primary_darker">#333333</color>
     <color name="accent">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="jet">#222222</color>
