--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
 
         <ImageView android:src="@drawable/logo"
             android:layout_width="375dp"
-            android:layout_height="120dp"
+            android:layout_height="80dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:layout_gravity="center_horizontal"
@@ -33,9 +33,12 @@
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="0dp"
             android:layout_marginBottom="10dp">
             <EditText android:id="@+id/input_email"
+                android:drawableLeft="@mipmap/ic_person_black_36dp"
+                android:drawablePadding="10dp"
+                android:minHeight="60dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
@@ -46,9 +49,12 @@
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="0dp"
             android:layout_marginBottom="10dp">
             <EditText android:id="@+id/input_password"
+                android:drawableLeft="@mipmap/ic_https_black_36dp"
+                android:drawablePadding="10dp"
+                android:minHeight="60dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
@@ -59,31 +65,38 @@
             android:id="@+id/btn_login"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
             android:padding="12dp"
             android:text="Login"
+            android:minHeight="70dp"
             android:textSize="22dip"/>
 
-        <TextView android:id="@+id/link_forgot"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="0dp"
-            android:text="Forgot password?"
-            android:layout_gravity="top|left"
-            android:gravity="left"
-            android:textSize="18dip"/>
+        <RelativeLayout
+            android:id="@+id/RelativeLayout01"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
 
-        <TextView android:id="@+id/link_signup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="0dp"
-            android:text="New here? Sign up"
-            android:layout_gravity="top|right"
-            android:gravity="right"
-            android:textSize="18dip"/>
+            <TextView android:id="@+id/link_signup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="0dp"
+                android:text="New here? Sign up"
+                android:layout_gravity="right"
+                android:gravity="right"
+                android:layout_alignParentRight="true"
+                android:textSize="18dip"/>
 
+            <TextView android:id="@+id/link_forgot"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="0dp"
+                android:text="Forgot password?"
+                android:gravity="left"
+                android:layout_alignParentLeft="true"
+                android:textSize="18dip"/>
 
+        </RelativeLayout>
 
     </LinearLayout>
 </ScrollView>
