--- a/app/src/main/res/layout/content_coupon.xml
+++ b/app/src/main/res/layout/content_coupon.xml
@@ -1,19 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:id="@+id/content_coupon"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="eizougraphic.sintret.hushpuppies.AboutActivity">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/content_main"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fitsSystemWindows="true">
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="match_parent"
-        android:text="Coupon"
-        android:layout_height="wrap_content" />
 
-</RelativeLayout>
+    <!-- start lists -->
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="55dp"
+        android:orientation="vertical" >
+
+
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:id="@+id/imageView1"
+            android:src="@drawable/item"
+            android:layout_centerVertical="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="10% All Stores"
+            android:id="@+id/titleView1"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:textSize="18dp"
+            android:textStyle="bold"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="*Selected store"
+            android:id="@+id/descView1"
+            android:layout_centerVertical="true"
+            android:layout_alignLeft="@+id/titleView1"
+            android:layout_alignStart="@+id/titleView1" />
+        <ImageButton
+            android:layout_toRightOf="@+id/titleView1"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/btn_add"
+            android:id="@+id/buttonPanel" />
+
+    </RelativeLayout>
+    <!-- end lists -->
+
+</ScrollView>
