--- a/app/src/main/res/layout/content_point.xml
+++ b/app/src/main/res/layout/content_point.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/content_main"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fitsSystemWindows="true">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
@@ -10,10 +15,93 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/about"
     tools:context="eizougraphic.sintret.hushpuppies.AboutActivity">
 
+    <!-- Top Text -->
     <TextView
-        android:id="@+id/textView1"
         android:layout_width="match_parent"
-        android:text="Point"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="Earn your Rewards"
+        android:lineSpacingExtra="5dp"
+        android:gravity="center"
+        android:textSize="25dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="55dp"
+        android:id="@+id/textView3" />
+
+    <RelativeLayout
+        android:layout_width="220dp"
+        android:layout_height="220dp"
+        android:layout_below="@+id/textView3"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp"
+        android:background="@drawable/circle"
+        android:padding="0dp"
+        android:id="@+id/relativeLayout">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Balance"
+            android:fontFamily="times new roman"
+            android:gravity="center"
+            android:textSize="22dip"
+            android:layout_gravity="center"
+            android:layout_above="@+id/textView4"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="10dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="1200"
+            android:gravity="center"
+            android:textSize="40dip"
+            android:layout_gravity="center"
+            android:id="@+id/textView4"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="70dp" />
+
+    </RelativeLayout>
+
+
+    <ImageButton
+        android:layout_below="@+id/relativeLayout"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:background="@drawable/btn_add"
+        android:layout_alignTop="@+id/textView4"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="-50dp"
+        android:id="@+id/buttonPanel" />
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Earn 10 points per 10,000 IDR purchase."
+        android:gravity="center"
+        android:layout_below="@+id/buttonPanel"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="60dp"
+        android:id="@+id/textView5" />
+
+    <Button
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/textView5"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:padding="12dp"
+        android:text="Exchange coupon"
+        android:minHeight="70dp"
+        android:textSize="22dip"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
 
 </RelativeLayout>
+
+</ScrollView>
