--- a/app/src/main/res/layout/content_exchange.xml
+++ b/app/src/main/res/layout/content_exchange.xml
@@ -59,14 +59,15 @@
             android:layout_centerVertical="true"
             android:layout_alignLeft="@+id/titleView1"
             android:layout_alignStart="@+id/titleView1" />
-        <ImageButton
+
+        <Button
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:background="@drawable/btn_add"
             android:id="@+id/buttonPanel"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
+            android:hint="500 pt"
             android:layout_marginRight="10dp"/>
 
     </RelativeLayout>
