--- a/app/src/main/res/layout/content_stamp.xml
+++ b/app/src/main/res/layout/content_stamp.xml
@@ -19,8 +19,7 @@
             android:background="@drawable/stamp_checked"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignLeft="true" />
+            android:layout_alignParentStart="true" />
         <ImageButton
             android:layout_width="90dp"
             android:layout_height="90dp"
@@ -43,8 +42,7 @@
             android:background="@drawable/stamp_empty"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignLeft="true" />
+            android:layout_alignParentStart="true" />
         <ImageButton
             android:layout_marginTop="110dp"
             android:layout_width="90dp"
@@ -69,8 +67,7 @@
             android:background="@drawable/stamp_empty"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignLeft="true" />
+            android:layout_alignParentStart="true" />
         <ImageButton
             android:layout_marginTop="220dp"
             android:layout_width="90dp"
@@ -95,8 +92,7 @@
             android:background="@drawable/stamp_empty"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignLeft="true" />
+            android:layout_alignParentStart="true" />
         <ImageButton
             android:layout_marginTop="330dp"
             android:layout_width="90dp"
